# axum-cqrs-rust

./: .env.dist  .gitattributes  .gitignore  Cargo.toml  DB.md  MEMO.md  README.md  REDIS_VERIFICATION.md  TABLE.ja.md  compose.yml
.devcontainer/: devcontainer.json  setup-git-aliases.sh
.github/: copilot-instructions.md
.github/prompts/: domain.prompt.md
.github/workflows/: rust.yml
AIgenerated.md/: review.md
Description/: COMMAND_HANDLER_DESIGN_NOTES.md  EVENT_DRIVEN_REDIS.md  EVENT_SYSTEM_ARCHITECTURE.md  REDIS_COMMIT_ALTERNATIVES.md
Docker/db/: Dockerfile  init.sql
Docker/server/: Dockerfile
docs/: DEPENDENCIES.md  REDIS_USAGE.md  TABLE.ja.md
sql/: check.sql  clean_up.sql  create.sql  drop_table.sql
src/: handler.rs  injectors.rs  main.rs
src/crates/api/: Cargo.toml
src/crates/api/src/: app_state.rs  handler.rs  lib.rs  router.rs
src/crates/cdc-consumer/: Cargo.toml
src/crates/cdc-consumer/src/: main.rs
src/crates/command/: Cargo.toml
src/crates/command/src/: command.rs  command_handler.rs  create_circle.rs  lib.rs
src/crates/command/src/command/: create_circle.rs  find_circle.rs  update_circle.rs
src/crates/domain/: Cargo.toml
src/crates/domain/src/: aggregate.rs
src/crates/domain/src/aggregate/: circle.rs  member.rs  value_object.rs
src/crates/domain/src/aggregate/circle/: event.rs  member.rs
src/crates/domain/src/aggregate/member/: event.rs
src/crates/domain/src/aggregate/value_object/: circle_id.rs  event_id.rs  grade.rs  member_id.rs  version.rs
src/crates/domain/src/interface/: circle_duplicate_checker_interface.rs  circle_repository_interface.rs
src/crates/domain/src/interface/command/: circle_duplicate_checker_interface.rs  circle_repository_interface.rs
src/crates/domain/src/interface/query/: circle_reader_interface.rs
src/crates/event/: Cargo.toml
src/crates/event/src/: circle.rs  lib.rs  member.rs
src/crates/event/src/circle/: circle_created.rs  circle_deleted.rs
src/crates/event/src/member/: member_created.rs  member_deleted.rs
src/crates/infrastructure/: Cargo.toml
src/crates/infrastructure/src/: circle_duplicate_checker.rs  circle_duplicate_checker_with_my_sql.rs  circle_reader.rs  circle_reader_with_my_sql.rs  circle_repository.rs  circle_repository_with_my_sql.rs  event_publisher.rs  lib.rs  maria_db_schema.rs  redis_circle_reader.rs
src/crates/infrastructure/src/db_data/: circle_data.rs  member_data.rs
src/crates/infrastructure/src/local_db_schema/: circle_data.rs  doc.md  member_data.rs
src/crates/infrastructure/src/maria_db_schema/: circle_data.rs  circle_event_data.rs  circle_protection_data.rs  circle_snapshot_data.rs  member_data.rs
src/crates/main/: Cargo.toml
src/crates/main/src/: app.rs  config.rs  injectors.rs  lib.rs
src/crates/main/src/config/: connect.rs  redis_connect.rs
src/crates/main/src/injectors/: build_command_handler.rs  build_query_handler.rs  command_handler_impl.rs
src/crates/query/: Cargo.toml
src/crates/query/src/: interface.rs  lib.rs  query.rs  query_handler.rs
src/crates/query/src/interface/: circle_reader_interface.rs  get_circle_reader.rs  list_circles_reader_interface.rs
src/crates/query/src/query/: get_circle.rs  list_circles.rs
src/crates/usecase/src/: create_circle.rs  update_circle.rs
src/injectors/: build_command_handler.rs  build_query_handler.rs  command_handler_impl.rs  query_handler_impl.rs
