[workspace]
members = [
    "src/crates/infrastructure",
    "src/crates/domain",
    "src/crates/command",
    "src/crates/query",
    "src/crates/api",
]
[package]
name = "app"
version = "0.1.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
axum.workspace = true
dotenv = "0.15.0"
serde.workspace = true
serde_json = "1.0.140"
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "env-filter",
    "fmt",
] }
api = { path = "./src/crates/api" }
domain = { path = "./src/crates/domain" }
infrastructure = { path = "./src/crates/infrastructure" }
command = { path = "./src/crates/command" }
query = { path = "./src/crates/query" }


[workspace.dependencies]
axum = { version = "0.8.3", features = ["macros"] }
anyhow = "1.0.97"
async-trait = "0.1.88"
mockall = "0.13.1"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
tracing = "0.1.41"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
