[workspace]
members = [
    "src/crates/infrastructure",
    "src/crates/domain",
    "src/crates/command",
    "src/crates/query",
    "src/crates/api",
    "src/crates/main",
    "src/crates/cdc-consumer",
]
[package]
name = "app"
version = "0.1.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

domain = { path = "./src/crates/domain" }
query = { path = "./src/crates/query" }
command = { path = "./src/crates/command" }
api = { path = "./src/crates/api" }
infrastructure = { path = "./src/crates/infrastructure" }
main = { path = "./src/crates/main" }

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
anyhow = "1.0.99"
async-trait = "0.1.89"
mockall = "0.13.1"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "std",
    "env-filter",
    "fmt",
] }
tower = { version = "0.5.2", features = ["util"] }
dotenv = "0.15.0"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"

[dev-dependencies]
tower.workspace = true
