[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
domain = { path = "../domain" }
tokio.workspace = true
async-trait.workspace = true
command = { path = "../command" }
query = { path = "../query" }
tracing.workspace = true
