[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = "0.4.39"
mockall.workspace = true
rand = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }


[features]
test-utils = []
